# simple_shell

./: .gitignore  CMakeLists.txt  run.sh  shell.c  shell.h
lib/: __getline.c  __getline.h  _pow_recursion.c  _pow_recursion.h  _realloc.c  _realloc.h  add_input.c  add_input.h  add_node_list.c  add_node_list.h  change_directory.c  change_directory.h  complete_path.c  complete_path.h  copy_double_pointer.c  copy_double_pointer.h  double_pointer.c  double_pointer.h  echo.c  echo.h  env_variables.c  env_variables.h  execute_command.c  execute_command.h  execute_decision.c  execute_decision.h  exit_command.c  exit_command.h  find_control.c  find_control.h  free_double_pointer.c  free_double_pointer.h  free_list.c  free_list.h  get_builtin_function.c  get_builtin_function.h  help.c  help.h  parse_string.c  parse_string.h  (+9 more)
